Add `--version` to manpage, and update dates in docs

--- a/src/package/identity/usr/share/man/man1/jasc-pal-thumbnailer.1
+++ b/src/package/identity/usr/share/man/man1/jasc-pal-thumbnailer.1
@@ -1,4 +1,4 @@
-.TH JASC-PAL-THUMBNAILER 1 2021-07-24
+.TH JASC-PAL-THUMBNAILER 1 2025-09-24
 .SH NAME
 jasc-pal-thumbnailer \- thumbnailer for jasc palette files
 .SH SYNOPSIS
@@ -10,6 +10,9 @@ and generates a thumbnail that shows the colors in the palette
 .TP
 .BR \-? ", " \-\-help
 Displays a help message and exits.
+.TP
+.BR \-\-version
+Displays program version and exits.
 .TP
 .BR \-s ", " \-\-size =\fIDIM\fR
 The pixel dimensions of the generated output file.
